// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fAQ > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mcqshm0 styles__1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div />
        <div>
          <p
            class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_variant_bodyStronger__m4c9owo style_undefined_compound_1__m4c9ow1b"
          >
            Title
          </p>
          <div
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with illustrationTest 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mcqshm0 styles__1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div>
          <div
            class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
          >
            1
          </div>
        </div>
        <div>
          <p
            class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_variant_bodyStronger__m4c9owo style_undefined_compound_1__m4c9ow1b"
          >
            Title
          </p>
          <div
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with notes 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mcqshm0 styles__1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div />
        <div>
          <p
            class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_variant_bodyStronger__m4c9owo style_undefined_compound_1__m4c9ow1b"
          >
            Title
          </p>
          <div
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
          >
            Description
            <small
              class="style__m4c9ow0 style_italic_true__m4c9ow2 style_prominence_default__m4c9ow4 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a"
            >
              Notes
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with productIconName 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mcqshm0 styles__1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div>
          <svg
            aria-hidden="true"
            class="uv_icons_q76b9r3 uv_icons_q76b9r5"
            height="64"
            viewBox="0 0 64 64"
            width="64"
          >
            <g
              clip-path="url(#a)"
            >
              <g>
                <g
                  class="fillWeak"
                  fill="#521094"
                >
                  <path
                    d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14M16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16z"
                    fill-rule="evenodd"
                  />
                </g>
              </g>
              <g>
                <path
                  class="fillStrong"
                  clip-rule="evenodd"
                  d="M32 16.5c-8.56 0-15.5 6.94-15.5 15.5 0 3.1.909 5.984 2.474 8.404a1 1 0 0 1 .126.802l-1.608 6.003 6.33-1.696a1 1 0 0 1 .739.089A15.4 15.4 0 0 0 32 47.5c8.56 0 15.5-6.94 15.5-15.5S40.56 16.5 32 16.5M14.5 32c0-9.665 7.835-17.5 17.5-17.5S49.5 22.335 49.5 32 41.665 49.5 32 49.5a17.4 17.4 0 0 1-8.042-1.953l-7.622 2.042a1 1 0 0 1-1.224-1.225l1.943-7.254A17.4 17.4 0 0 1 14.5 32"
                  fill="#bf95f9"
                  fill-rule="evenodd"
                />
                <g
                  class="fill"
                  fill="#fff"
                >
                  <path
                    clip-rule="evenodd"
                    d="M32 11c-11.598 0-21 9.402-21 21 0 3.631.92 7.045 2.541 10.022a1 1 0 1 1-1.757.956A22.9 22.9 0 0 1 9 32C9 19.297 19.297 9 32 9s23 10.297 23 23-10.297 23-23 23c-3.35 0-6.536-.717-9.41-2.007a1 1 0 1 1 .82-1.825A20.9 20.9 0 0 0 32 53c11.598 0 21-9.402 21-21s-9.402-21-21-21"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M30.32 35.22v-.768q0-1.2.456-1.944.48-.768 1.584-1.272l.456-.216q1.128-.528 1.728-1.128.6-.624.6-1.656 0-.768-.384-1.296-.384-.552-1.08-.84-.672-.288-1.56-.288-.936 0-1.68.312-.72.312-1.176.936-.432.6-.432 1.536v.624H26v-.576q0-1.656.792-2.832.816-1.2 2.208-1.824t3.12-.624q1.704 0 3.024.624t2.064 1.728q.768 1.08.768 2.52 0 1.416-.528 2.328a4.4 4.4 0 0 1-1.32 1.488 11 11 0 0 1-1.68.984l-.48.216q-.432.192-.6.48t-.168.816v.672zm1.512 5.616q-.888 0-1.512-.576-.6-.6-.6-1.536c0-.936.2-1.136.6-1.536q.624-.6 1.512-.6.912 0 1.512.6.624.6.624 1.536c0 .936-.208 1.136-.624 1.536q-.6.576-1.512.576"
                  />
                </g>
              </g>
            </g>
            <defs>
              <clippath
                id="a"
              >
                <path
                  class="fill"
                  d="M0 0h64v64H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </div>
        <div>
          <p
            class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_variant_bodyStronger__m4c9owo style_undefined_compound_1__m4c9ow1b"
          >
            Title
          </p>
          <div
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
